# rag

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  docker-entrypoint.sh  extraction.py  main.py  milvus_check.py  milvus_hybrid_search.py  milvus_reset.py  milvus_retrieval.py  pdf_ingest_direct.py  pyproject.toml  requirements.txt  test_main_usecases.py
output/: test-with-image-refs.html  test-with-image-refs.md  test-with-images.md
src/: config.py  main.py
src/adapters/primary/: api_adapter.py
src/adapters/secondary/: bge_m3_embedder_adapter.py  docling_chunker_adapter.py  docling_parser_adapter.py  env_apikey_adapter.py  milvus_adapter.py
src/application/: use_cases.py
src/domain/: models.py
src/ports/: input_ports.py  output_ports.py
