[project]
name = "surrodocs-processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pymilvus>=2.5.6",
    "pymupdf>=1.25.5",
    "torch>=2.6.0",
    "transformers>=4.51.3",
]

# src 디렉토리를 패키지로 인식하도록 설정 추가
[tool.setuptools]
package-dir = {"" = "src"}

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
]


[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]  # "." 대신 "src"로 변경
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.ruff]
line-length = 120
target-version = "py312"
include = [
    "surrodocs_common/**/*.py",
    "tests/**/*.py",
]
extend-include = [".venv", "build", "dist", "migrations"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # E, F: flake8 기본, I: isort, UP: pyupgrade

[tool.ruff.format]
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true


[[tool.uv.index]]
name = "surro-nexus"
url = "https://nexus.surromind.ai/repository/surrodocs/"
publish-url = "https://nexus.surromind.ai/repository/surrodocs/"
explicit = true
